ANTLR/src/main/BuffParser.java
// Generated from Buff.g4 by ANTLR 4.9
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BuffParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NUMBERDCL=1, TEXTDCL=2, ID=3, TEXTVAL=4, NUMBERVAL=5, LPAREN=6, RPAREN=7, 
		ASSIGN=8, COMMA=9, PLUS=10, MINUS=11, SEMICOLON=12, WS=13, NEWLINE=14;
	public static final int
		RULE_prog = 0, RULE_dcls = 1, RULE_dcl = 2, RULE_type = 3, RULE_dclparams = 4, 
		RULE_dclmoreparams = 5, RULE_dclparam = 6, RULE_stmts = 7, RULE_stmt = 8, 
		RULE_math = 9, RULE_followterm = 10, RULE_term = 11, RULE_simpleops = 12, 
		RULE_val = 13, RULE_funccall = 14, RULE_stmtparams = 15, RULE_stmtmoreparams = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "dcls", "dcl", "type", "dclparams", "dclmoreparams", "dclparam", 
			"stmts", "stmt", "math", "followterm", "term", "simpleops", "val", "funccall", 
			"stmtparams", "stmtmoreparams"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'number'", "'text'", null, null, null, "'('", "')'", "'='", "','", 
			"'+'", "'-'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NUMBERDCL", "TEXTDCL", "ID", "TEXTVAL", "NUMBERVAL", "LPAREN", 
			"RPAREN", "ASSIGN", "COMMA", "PLUS", "MINUS", "SEMICOLON", "WS", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Buff.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BuffParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public DclsContext dcls() {
			return getRuleContext(DclsContext.class,0);
		}
		public StmtsContext stmts() {
			return getRuleContext(StmtsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(BuffParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			dcls();
			setState(35);
			stmts();
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclsContext extends ParserRuleContext {
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(BuffParser.SEMICOLON, 0); }
		public DclsContext dcls() {
			return getRuleContext(DclsContext.class,0);
		}
		public DclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcls; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterDcls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitDcls(this);
		}
	}

	public final DclsContext dcls() throws RecognitionException {
		DclsContext _localctx = new DclsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dcls);
		try {
			setState(43);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBERDCL:
			case TEXTDCL:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				dcl();
				setState(39);
				match(SEMICOLON);
				setState(40);
				dcls();
				}
				break;
			case EOF:
			case ID:
			case TEXTVAL:
			case NUMBERVAL:
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(BuffParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(BuffParser.LPAREN, 0); }
		public DclparamsContext dclparams() {
			return getRuleContext(DclparamsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(BuffParser.RPAREN, 0); }
		public TerminalNode ASSIGN() { return getToken(BuffParser.ASSIGN, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitDcl(this);
		}
	}

	public final DclContext dcl() throws RecognitionException {
		DclContext _localctx = new DclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dcl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			type();
			setState(46);
			match(ID);
			setState(47);
			match(LPAREN);
			setState(48);
			dclparams();
			setState(49);
			match(RPAREN);
			setState(50);
			match(ASSIGN);
			setState(51);
			stmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode NUMBERDCL() { return getToken(BuffParser.NUMBERDCL, 0); }
		public TerminalNode TEXTDCL() { return getToken(BuffParser.TEXTDCL, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_la = _input.LA(1);
			if ( !(_la==NUMBERDCL || _la==TEXTDCL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclparamsContext extends ParserRuleContext {
		public DclparamContext dclparam() {
			return getRuleContext(DclparamContext.class,0);
		}
		public DclmoreparamsContext dclmoreparams() {
			return getRuleContext(DclmoreparamsContext.class,0);
		}
		public DclparamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dclparams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterDclparams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitDclparams(this);
		}
	}

	public final DclparamsContext dclparams() throws RecognitionException {
		DclparamsContext _localctx = new DclparamsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dclparams);
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBERDCL:
			case TEXTDCL:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				dclparam();
				setState(56);
				dclmoreparams();
				}
				break;
			case RPAREN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclmoreparamsContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(BuffParser.COMMA, 0); }
		public DclparamContext dclparam() {
			return getRuleContext(DclparamContext.class,0);
		}
		public DclmoreparamsContext dclmoreparams() {
			return getRuleContext(DclmoreparamsContext.class,0);
		}
		public DclmoreparamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dclmoreparams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterDclmoreparams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitDclmoreparams(this);
		}
	}

	public final DclmoreparamsContext dclmoreparams() throws RecognitionException {
		DclmoreparamsContext _localctx = new DclmoreparamsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dclmoreparams);
		try {
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				match(COMMA);
				setState(62);
				dclparam();
				setState(63);
				dclmoreparams();
				}
				break;
			case RPAREN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclparamContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(BuffParser.ID, 0); }
		public DclparamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dclparam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterDclparam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitDclparam(this);
		}
	}

	public final DclparamContext dclparam() throws RecognitionException {
		DclparamContext _localctx = new DclparamContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dclparam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			type();
			setState(69);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtsContext extends ParserRuleContext {
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(BuffParser.SEMICOLON, 0); }
		public StmtsContext stmts() {
			return getRuleContext(StmtsContext.class,0);
		}
		public StmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterStmts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitStmts(this);
		}
	}

	public final StmtsContext stmts() throws RecognitionException {
		StmtsContext _localctx = new StmtsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stmts);
		try {
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
			case TEXTVAL:
			case NUMBERVAL:
			case LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				stmt();
				setState(72);
				match(SEMICOLON);
				setState(73);
				stmts();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public MathContext math() {
			return getRuleContext(MathContext.class,0);
		}
		public TerminalNode TEXTVAL() { return getToken(BuffParser.TEXTVAL, 0); }
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitStmt(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stmt);
		try {
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
			case NUMBERVAL:
			case LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				math();
				}
				break;
			case TEXTVAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				match(TEXTVAL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MathContext extends ParserRuleContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public FollowtermContext followterm() {
			return getRuleContext(FollowtermContext.class,0);
		}
		public MathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_math; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterMath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitMath(this);
		}
	}

	public final MathContext math() throws RecognitionException {
		MathContext _localctx = new MathContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_math);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			term();
			setState(83);
			followterm();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FollowtermContext extends ParserRuleContext {
		public SimpleopsContext simpleops() {
			return getRuleContext(SimpleopsContext.class,0);
		}
		public MathContext math() {
			return getRuleContext(MathContext.class,0);
		}
		public FollowtermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_followterm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterFollowterm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitFollowterm(this);
		}
	}

	public final FollowtermContext followterm() throws RecognitionException {
		FollowtermContext _localctx = new FollowtermContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_followterm);
		try {
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PLUS:
			case MINUS:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				simpleops();
				setState(86);
				math();
				}
				break;
			case RPAREN:
			case COMMA:
			case SEMICOLON:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public FunccallContext funccall() {
			return getRuleContext(FunccallContext.class,0);
		}
		public ValContext val() {
			return getRuleContext(ValContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_term);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				funccall();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				val();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleopsContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(BuffParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(BuffParser.MINUS, 0); }
		public SimpleopsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleops; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterSimpleops(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitSimpleops(this);
		}
	}

	public final SimpleopsContext simpleops() throws RecognitionException {
		SimpleopsContext _localctx = new SimpleopsContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_simpleops);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_la = _input.LA(1);
			if ( !(_la==PLUS || _la==MINUS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(BuffParser.LPAREN, 0); }
		public MathContext math() {
			return getRuleContext(MathContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(BuffParser.RPAREN, 0); }
		public TerminalNode NUMBERVAL() { return getToken(BuffParser.NUMBERVAL, 0); }
		public TerminalNode ID() { return getToken(BuffParser.ID, 0); }
		public ValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_val; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterVal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitVal(this);
		}
	}

	public final ValContext val() throws RecognitionException {
		ValContext _localctx = new ValContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_val);
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				match(LPAREN);
				setState(98);
				math();
				setState(99);
				match(RPAREN);
				}
				break;
			case NUMBERVAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				match(NUMBERVAL);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunccallContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BuffParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(BuffParser.LPAREN, 0); }
		public StmtparamsContext stmtparams() {
			return getRuleContext(StmtparamsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(BuffParser.RPAREN, 0); }
		public FunccallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funccall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterFunccall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitFunccall(this);
		}
	}

	public final FunccallContext funccall() throws RecognitionException {
		FunccallContext _localctx = new FunccallContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_funccall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(ID);
			setState(106);
			match(LPAREN);
			setState(107);
			stmtparams();
			setState(108);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtparamsContext extends ParserRuleContext {
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public StmtmoreparamsContext stmtmoreparams() {
			return getRuleContext(StmtmoreparamsContext.class,0);
		}
		public StmtparamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtparams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterStmtparams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitStmtparams(this);
		}
	}

	public final StmtparamsContext stmtparams() throws RecognitionException {
		StmtparamsContext _localctx = new StmtparamsContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_stmtparams);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
			case TEXTVAL:
			case NUMBERVAL:
			case LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				stmt();
				setState(111);
				stmtmoreparams();
				}
				break;
			case RPAREN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtmoreparamsContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(BuffParser.COMMA, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public StmtmoreparamsContext stmtmoreparams() {
			return getRuleContext(StmtmoreparamsContext.class,0);
		}
		public StmtmoreparamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtmoreparams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).enterStmtmoreparams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BuffListener ) ((BuffListener)listener).exitStmtmoreparams(this);
		}
	}

	public final StmtmoreparamsContext stmtmoreparams() throws RecognitionException {
		StmtmoreparamsContext _localctx = new StmtmoreparamsContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_stmtmoreparams);
		try {
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				match(COMMA);
				setState(117);
				stmt();
				setState(118);
				stmtmoreparams();
				}
				break;
			case RPAREN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}